--- a/style.css
+++ b/style.css
@@ -372,7 +372,7 @@ h2 {
     padding: 25px;
   }
   .project-card {
-    /* margin: 25px; */
+    margin: 25px;
     width: 400px;
   }
   .slider-wrapper {
