--- a/style.css
+++ b/style.css
@@ -344,8 +344,7 @@ h2 {
   }
 
   h1 {
-    width: 100%;
-    font-size: 1.8rem;
+    font-size: 3rem;
   }
 
   .sub-section {
@@ -384,5 +383,40 @@ h2 {
 
   .slider {
     font-size: 20px;
+  }
+
+  .hero-area {
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .hero-text {
+    margin: 0;
+    /* margin-left: 50px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .socials {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+
+    top: 50%;
+    /* left: 50%; */
+    /* text-align: center; */
+  }
+  a.social {
+    padding: 0 15px 0 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
