--- a/style.css
+++ b/style.css
@@ -390,11 +390,11 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
   }
 
   .hero-text {
     margin: 0;
-    /* margin-left: 50px; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -408,10 +408,7 @@ h2 {
     text-align: center;
     align-items: center;
     justify-content: center;
-
     top: 50%;
-    /* left: 50%; */
-    /* text-align: center; */
   }
   a.social {
     padding: 0 15px 0 15px;
