--- a/keycode-app/style.css
+++ b/keycode-app/style.css
@@ -19,6 +19,7 @@ body {
 
 .key {
   border: 1px solid #999;
+  border-radius: 5px;
   background-color: #eee;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
   display: inline-flex;
