--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ h2 {
 }
 
 .project-image {
-  object-fit: none;
+  object-fit: contain;
   width: 400px;
   height: 250px;
   /* border-radius: 50%; */
