--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ h2 {
   align-items: center;
 }
 .profile-pic {
-  object-fit: cover;
+  object-fit: contain;
   height: 300px;
   width: 300px;
   border-radius: 50%;
